@@ -1,3 +1,6 @@
+2007-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ src/connection_base.cxx:
+  - Compile fix for libpq without PQserverVersion()
 2007-02-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
  win32/common-sample, win32/vc-libpqxx.mak.template:
   - Removed quotes to fix problems with spaces, thanks Curran Schiefelbein
